Fix formatting on mobile screen

--- a/styles/style.css
+++ b/styles/style.css
@@ -211,7 +211,7 @@ section {
   justify-content: center;
   margin-bottom: 2rem;
   margin-top: 2rem;
-  gap: 4rem;
+  gap: 2rem;
 }
 .proj-details{
   font-size: 14px;
